--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
   <body style="margin: 0px; overflow: hidden" onclick="playSound();">
     <!-- minimal loader shown until image descriptors are loaded -->
     <audio id="mediation" autoplay>
-      <source src="/assets/source_audio/Annonce_mixage.mp3" type="audio/mpeg" />
+      <source
+        src="https://eracom-id301.github.io/SURFACES-WORKSHOP/assets/source_audio/Annonce_mixage.mp3"
+        type="audio/mpeg"
+      />
     </audio>
     <div class="arjs-loader">
       <div>Scanner la carte</div>
@@ -57,7 +60,7 @@
         smoothThreshold="30"
       >
         <a-entity
-          gltf-model="/assets/animation_v2.gltf"
+          gltf-model="https://eracom-id301.github.io/SURFACES-WORKSHOP/assets/animation_v2.gltf"
           animation-mixer
           scale="50 50 50"
           rotation="-90 180 0 "
