--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     }
   </style>
 
-  <body style="margin: 0px; overflow: hidden" onclick="playSound();">
+  <body style="margin: 0px; overflow: hidden">
     <!-- minimal loader shown until image descriptors are loaded -->
 
-    <div class="arjs-loader">
+    <div class="arjs-loader"  onclick="playSound();">
       
     <audio id="mediation" autoplay>
       <source
