--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       left: 0;
 
       background-color: rgba(0, 0, 0, 0.8);
-      z-index: 1;
+      z-index: 9999;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -35,7 +35,7 @@
   <body style="margin: 0px; overflow: hidden">
     <!-- minimal loader shown until image descriptors are loaded -->
 
-    <div class="arjs-loader"  onclick="playSound();">
+    <div class="arjs-loader"  >
       
     <audio id="mediation" autoplay>
       <source
@@ -58,7 +58,7 @@
         smoothTolerance="1"
         smoothThreshold="30"
       >
-        <a-entity
+        <a-entity onclick="playSound();"
           gltf-model="https://eracom-id301.github.io/SURFACES-WORKSHOP/assets/animation_v2.gltf"
           animation-mixer
           scale="50 50 50"
