--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         type="audio/mpeg"
       />
     </audio>
-    <a-scene onclick="playSound();"
+    <a-scene 
       vr-mode-ui="enabled: false;"
       renderer="logarithmicDepthBuffer: true;"
       embedded
