--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     }
   </style>
 
-  <body style="margin: 0px; overflow: hidden">
+  <body style="margin: 0px; overflow: hidden" onclick="playSound();">
     <!-- minimal loader shown until image descriptors are loaded -->
 
     <div class="arjs-loader"  >
@@ -52,7 +52,7 @@
       <!-- we use cors proxy to avoid cross-origin problems -->
       <a-nft
         type="nft"
-        url="/assets/verso"
+        url="https://eracom-id301.github.io/SURFACES-WORKSHOP/assets/verso"
         smooth="true"
         smoothCount="30"
         smoothTolerance="1"
