--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       
     <audio id="mediation" autoplay>
       <source
-        src="/https://eracom-id301.github.io/SURFACES-WORKSHOP/assets/source_audio/Annonce_mixage.mp3"
+        src="/assets/source_audio/Annonce_mixage.mp3"
         type="audio/mpeg"
       />
     </audio>
@@ -52,14 +52,14 @@
       <!-- we use cors proxy to avoid cross-origin problems -->
       <a-nft
         type="nft"
-        url="/https://eracom-id301.github.io/SURFACES-WORKSHOP/assets/verso"
+        url="/assets/verso"
         smooth="true"
         smoothCount="30"
         smoothTolerance="1"
         smoothThreshold="30"
       >
         <a-entity 
-          gltf-model="/https://eracom-id301.github.io/SURFACES-WORKSHOP/assets/animation_v2.gltf"
+          gltf-model="/assets/animation_v2.gltf"
           animation-mixer
           scale="50 50 50"
           rotation="-90 180 0 "
