--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
 
   <body style="margin: 0px; overflow: hidden" onclick="playSound();">
     <audio id="mediation" autoplay loop>
-      <source src="/assets/source_audio/Annonce_mixage.mp3" type="audio/mpeg" />
+      <source
+        src="https://eracom-id301.github.io/SURFACES-WORKSHOP//assets/source_audio/Annonce_mixage.mp3"
+        type="audio/mpeg"
+      />
       Your browser does not support the audio element.
     </audio>
 
@@ -51,14 +54,14 @@
       <!-- we use cors proxy to avoid cross-origin problems -->
       <a-nft
         type="nft"
-        url="/assets/verso"
+        url="https://eracom-id301.github.io/SURFACES-WORKSHOP//assets/verso"
         smooth="true"
         smoothCount="30"
         smoothTolerance="1"
         smoothThreshold="30"
       >
         <a-entity
-          gltf-model="/assets/animation_v2.gltf"
+          gltf-model="https://eracom-id301.github.io/SURFACES-WORKSHOP//assets/animation_v2.gltf"
           animation-mixer
           scale="50 50 50"
           rotation="-90 180 0 "
